# bitcoin-federated-time

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README-DW.md  README.md  pyproject.toml
.claude/skills/bitcoin-time-clock/: SKILL.md
.github/workflows/: pages.yml  tests.yml
bft/: __init__.py  __main__.py  holidays.py  lore.py  sky.py
docs/: bitcoin-holidays.md  degen-hours.md  pupil-clock-grid.md  the-thirteen-seats.md  the-two-moons.md
guides/: 1-a-clock-made-of-blocks.md  2-the-months-and-the-moon.md  3-the-two-calendars.md  4-the-hidden-thirteenth.md  README.md
studies/: README.md  bitcoin-birthday.html  clock-study-pupil.html  index.html
tests/: test_bft.py
