[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-federated-time"
version = "0.3.0"
description = "Read a Bitcoin block height as time — ordinal theory's clock, taken deeper: the hh:mm block-beat face, a 13-month block calendar, the halving/countdown math, and the degree notation kept as an honest sidebar. Sparked at the Ordinals coding club; built by degens to show the heart of bitcoin in 8-bit nostalgic art. No dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pac's Arcade", email = "pac@pacsarcade.org" }]
keywords = ["bitcoin", "ordinals", "block-height", "calendar", "time", "halving", "runes", "clock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
# TODO: set these to the real repo once created (name/lore is Pac's to finalize before publish).
Homepage = "https://github.com/PacsArcade/bitcoin-federated-time"
Source = "https://github.com/PacsArcade/bitcoin-federated-time"

[tool.setuptools]
packages = ["bft"]
